# pipreqs-action

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile copy  Dockerfile-git-python  MARKETPLACE.md  MARKETPLACE_SUMMARY.md  README-Dockerfile-git-python.md  README.md  SECURITY.md  action.yml  codecov.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_main.py
.devcontainer/: devcontainer.json  postAttachCommands.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/secret_github_com_token/: action.yml
.github/actions/secret_whisperer/: action.yml
.github/actions/secret_whisperer_dockerhub_registry/: action.yml
.github/actions/update_readme_action_reference/: action.yml  update_readme_action_reference.py
.github/instructions/: copilot-instructions.md
.github/workflows/: daily_report.yml  lint_tests.yml  pr.yml  pr_labeler.yml  release.yml  tag.yml  template-sync.yml  update-major-tag.yml
scripts/: reset-poetry-venv
src/: app.py  main.py  requirements.txt  test_main.py
src/github_action/: __init__.py  __main__.py  main.py
src/github_action/libs/: helper.py  save_requirements_result.py
tests/: test_action_yml.py  test_app.py  test_cli.py  test_main.py  test_main_cli.py
