[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pipreqs-action"
description = "Automatisierte Erstellung von requirements.txt für Python-Projekte mit GitHub Actions."
authors = [{ name = "Joerg Heinrich", email = "joerg@jfheinrich.eu" }]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = ["pipreqs==0.5.0", "GitPython==3.1.45"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8", "black", "isort", "pyupgrade"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--cov",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=xml:coverage/cov.xml",
    "--cov-report=html:coverage/cov_html",
    "--cov-report=lcov:coverage/cov.info",
]
